--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     </div>
   </section>
   <div id="calculate">
-    <button type="image" src="/media/photos/register.png" id="calculate-change" />Calculate</button>
+    <button type="image"
+      src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/register.png"
+      id="calculate-change" />Calculate</button>
   </div>
   <div>
     <p type="text" id="currency">
@@ -39,27 +41,27 @@
     <section id="bills">
       <div>
         <div class="money">
-          <img src="/media/photos/$100.jpg" />
+          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/$100.jpg" />
           <p id="hundred"></p>
         </div>
         <div class="money">
-          <img src="/media/photos/$50.jpg" />
+          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/$50.jpg" />
           <p id="fifty" type="text"></p>
         </div>
         <div class="money">
-          <img src="/media/photos/$20.jpg" />
+          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/$20.jpg" />
           <p id="twenty" type="text"></p>
         </div>
         <div class="money">
-          <img src="/media/photos/$10.jpg" />
+          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/$10.jpg" />
           <p id="ten" type="text"></p>
         </div>
         <div class="money">
-          <img src="/media/photos/$5.jpg" />
+          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/$5.jpg" />
           <p id="five" type="text"></p>
         </div>
         <div class="money">
-          <img src="/media/photos/$1.jpg" />
+          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/$1.jpg" />
           <p id="dollar" type="text"></p>
         </div>
       </div>
@@ -68,20 +70,20 @@
     <section id="cents">
       <div>
         <div class="money-cents">
-          <img src="/media/photos/quarter.png" />
+          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/quarter.png" />
           <p id="quarter"></p>
         </div>
         <div class="money-cents">
-          <img src="/media/photos/dime.png" />
+          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/dime.png" />
           <p id="dime" type="text"></p>
         </div>
         <div class="money-cents">
-          <img src="/media/photos/nickel.png" />
+          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/nickel.png" />
           <p id="nickel" type="text"></p>
           </h3>
         </div>
         <div class="money-cents">
-          <img src="/media/photos/penny.png" />
+          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/penny.png" />
           <p id="penny" type="text"></p>
           </h3>
         </div>
@@ -91,7 +93,8 @@
 
   <script src="main.js" charset="utf-8"></script>
   <video autoplay muted loop id="myVideo">
-    <source src="/media/videos/change.mp4" type="video/mp4">
+    <source src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/videos/change.mp4"
+      type="video/mp4">
   </video>
 
 </body>
