gh-pages image path update

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
     </div>
   </section>
   <div id="calculate">
-    <button type="image"
-      src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/register.png"
-      id="calculate-change" />Calculate</button>
+    <button type="image" src="/register.png" id="calculate-change" />Calculate</button>
   </div>
   <div>
     <p type="text" id="currency">
@@ -41,27 +39,27 @@
     <section id="bills">
       <div>
         <div class="money">
-          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/$100.jpg" />
+          <img src="$100.jpg" />
           <p id="hundred"></p>
         </div>
         <div class="money">
-          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/$50.jpg" />
+          <img src="$50.jpg" />
           <p id="fifty" type="text"></p>
         </div>
         <div class="money">
-          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/$20.jpg" />
+          <img src="$20.jpg" />
           <p id="twenty" type="text"></p>
         </div>
         <div class="money">
-          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/$10.jpg" />
+          <img src="/$10.jpg" />
           <p id="ten" type="text"></p>
         </div>
         <div class="money">
-          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/$5.jpg" />
+          <img src="$5.jpg" />
           <p id="five" type="text"></p>
         </div>
         <div class="money">
-          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/$1.jpg" />
+          <img src="$1.jpg" />
           <p id="dollar" type="text"></p>
         </div>
       </div>
@@ -70,20 +68,20 @@
     <section id="cents">
       <div>
         <div class="money-cents">
-          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/quarter.png" />
+          <img src="quarter.png" />
           <p id="quarter"></p>
         </div>
         <div class="money-cents">
-          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/dime.png" />
+          <img src="dime.png" />
           <p id="dime" type="text"></p>
         </div>
         <div class="money-cents">
-          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/nickel.png" />
+          <img src="nickel.png" />
           <p id="nickel" type="text"></p>
           </h3>
         </div>
         <div class="money-cents">
-          <img src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/photos/penny.png" />
+          <img src="penny.png" />
           <p id="penny" type="text"></p>
           </h3>
         </div>
@@ -93,8 +91,7 @@
 
   <script src="main.js" charset="utf-8"></script>
   <video autoplay muted loop id="myVideo">
-    <source src="/Users/williambroxton/code/ccc/projects/web102-change-calculator/media/videos/change.mp4"
-      type="video/mp4">
+    <source src="change.mp4" type="video/mp4">
   </video>
 
 </body>
