image path update

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </section>
   <div id="calculate">
-    <button type="image" src="/register.png" id="calculate-change" />Calculate</button>
+    <button type="image" src="register.png" id="calculate-change" />Calculate</button>
   </div>
   <div>
     <p type="text" id="currency">
@@ -51,7 +51,7 @@
           <p id="twenty" type="text"></p>
         </div>
         <div class="money">
-          <img src="/$10.jpg" />
+          <img src="$10.jpg" />
           <p id="ten" type="text"></p>
         </div>
         <div class="money">
