index.html edit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -34,9 +33,9 @@
     <p type="text" id="currency">
     </p>
   </div>
-  <section id="all-currency">
+  <div id="all-currency">
     <h2>Currency</h2>
-    <section id="bills">
+    <div id="bills">
       <div>
         <div class="money">
           <img src="$100.jpg" />
@@ -63,9 +62,9 @@
           <p id="dollar" type="text"></p>
         </div>
       </div>
-    </section>
+    </div>
 
-    <section id="cents">
+    <div id="cents">
       <div>
         <div class="money-cents">
           <img src="quarter.png" />
@@ -78,16 +77,14 @@
         <div class="money-cents">
           <img src="nickel.png" />
           <p id="nickel" type="text"></p>
-          </h3>
         </div>
         <div class="money-cents">
           <img src="penny.png" />
           <p id="penny" type="text"></p>
-          </h3>
         </div>
       </div>
-    </section>
-  </section>
+    </div>
+  </div>
 
   <script src="main.js" charset="utf-8"></script>
   <video autoplay muted loop id="myVideo">
